# demowebshop

./: README.md  pyproject.toml  pytest.ini
demowebshop/: app.py
demowebshop/api/: api_client.py
demowebshop/data/: data.py
demowebshop/helpers/: logger.py
demowebshop/ui/: cart_page.py
tests/: conftest.py  test_add_product_in_basket.py
